--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>UdaciFeeds</title>
+        <title>RMIT | Project 4 | UdaciFeeds</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,100,300,700">
@@ -23,7 +23,7 @@
                 <i class="icon-list"></i>
             </a>
 
-            <h1 class="header-title">Feeds</h1>
+            <h1 class="header-title">Feeds (checked)</h1>
         </div>
 
         <div class="slide-menu">
