--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <i class="icon-list"></i>
             </a>
 
-            <h1 class="header-title">Feeds (checked)</h1>
+            <h1 class="header-title">Feeds with tests</h1>
         </div>
 
         <div class="slide-menu">
